--- a/testdata/BUILD
+++ b/testdata/BUILD
@@ -5,3 +5,9 @@ filegroup(
     srcs = glob(["*.sgf"]),
     visibility=["//visibility:public"],
 )
+
+filegroup(
+    name = "models",
+    srcs = glob(["*.pb"]),
+    visibility=["//visibility:public"],
+)
